--- a/ws-wls-ear-second/pom.xml
+++ b/ws-wls-ear-second/pom.xml
@@ -24,6 +24,11 @@
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>ru.pa.ws</groupId>
+            <artifactId>ws-wls-ear</artifactId>
+            <version>${java.version}</version>
+        </dependency>
     </dependencies>
     
     <profiles>
