--- a/ws-wls-ear-second/pom.xml
+++ b/ws-wls-ear-second/pom.xml
@@ -28,7 +28,7 @@
             <groupId>ru.pa.ws</groupId>
             <artifactId>ws-wls-ear</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <type>ear</type>
+            <type>war</type>
         </dependency>
     </dependencies>
     
