--- a/ws-wls-ear/pom.xml
+++ b/ws-wls-ear/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <packaging>ear</packaging>
+    <packaging>war</packaging>
     <artifactId>ws-wls-ear</artifactId>
     <version>1.0-SNAPSHOT</version>
 
